--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "Window & Tabs Exporter",
+    "name": "Tabs Exporter",
     "description": "Export windows and tabs to a file",
     "version": "1.0.0",
     "permissions": ["tabs", "windows", "downloads"],
