--- a/manifest.json
+++ b/manifest.json
@@ -7,5 +7,9 @@
     "permissions": ["tabs", "windows", "downloads"],
     "action": {
         "default_popup": "popup.html"
+    },
+    "icons": {
+        "48": "assets/icon-48x48.png",
+        "128": "assets/icon-128x128.png"
     }
 }
